src/main/java/com/example/citronix/web/errors/ArbreUndefinedException.java
package com.example.citronix.web.errors;

public class ArbreUndefinedException extends RuntimeException {
    public ArbreUndefinedException(String message) {
        super(message);
    }

}
